Fixed: Context menu: Allow scrolling of an overflowed menu

--- a/src/styles/themes/plain/sidebar/popup.context-menu.styl
+++ b/src/styles/themes/plain/sidebar/popup.context-menu.styl
@@ -35,8 +35,11 @@
 
 .CtxMenu .box
   position: absolute
+  display: flex
+  flex-direction: column
   max-width: calc(100% - 28px)
   min-width: var(--ctx-menu-min-width)
+  max-height: 100vh
   z-index: 30
   padding: 0 0 0 0
   margin: 0
